feat: improve TokenBlacklistEntity with @GeneratedValue and audit timestamps